# SpatialReports

./: .Rhistory  README.md  pyproject.toml
R/: AnomalyPlots.R  CalcAnomaly.R  SpatSummary.R
SpatialReports/: SpatialDataset.py  SpatialReport.py
