[tool.poetry]
name = "spatialreports"
version = "0.1.0"
description = "A Python framework for generating automated reports of geospatial data."
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.24.0"
geopandas-postgis = "^0.2.1"
geopandas = "^0.11.1"
loguru = "^0.6.0"
cleo = "^0.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
ipykernel = "^6.16.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
